fix(viewer): disable bracket matching and open sun.lwawt modules for JOGL